# bookstore-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
api/: urls.py
api/books/models/: book.py
api/users/: admin.py  urls.py  views.py
api/users/factories/: __init__.py  user_factory.py
api/users/migrations/: 0001_initial.py  0002_alter_user_is_active.py
api/users/models/: __init__.py  base.py  manager.py  user.py
api/users/serializers/: user_serializer.py
api/users/tests/: test_models.py  test_serializers.py  test_views.py
config/: settings.py
config/settings/: __init__.py  base.py  cache.py  database.py  drf.py
nginx/: site.conf
